get rid of RequireJS

--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "u-standup",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "app.js",
   "scripts": {
+    "start": "npx serve .",
     "optimize-images": "node scripts/optimize-images.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
