--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "main": "app.js",
   "scripts": {
     "start": "npx serve .",
+    "build": "node scripts/build-events.js && node scripts/build-event-pages.js",
+    "build-events": "node scripts/build-events.js",
+    "build-pages": "node scripts/build-event-pages.js",
+    "convert-events": "node scripts/convert-events-to-yaml.js",
     "optimize-images": "node scripts/optimize-images.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -21,6 +25,7 @@
   },
   "homepage": "https://github.com/YuriiZhydetskyi/U-StandUp#readme",
   "devDependencies": {
+    "js-yaml": "^4.1.1",
     "sharp": "^0.34.5"
   }
 }
