--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "app.js",
   "scripts": {
     "start": "npx serve dist",
-    "build": "node scripts/build-dist.js",
+    "build:css": "npx @tailwindcss/cli -i ./src/css/input.css -o ./dist/css/style.css --minify",
+    "build": "node scripts/build-dist.js && npm run build:css",
+    "watch:css": "npx @tailwindcss/cli -i ./src/css/input.css -o ./dist/css/style.css --watch",
     "convert-events": "node scripts/convert-events-to-yaml.js",
     "optimize-images": "node scripts/optimize-images.js",
     "standardize-ids": "node scripts/standardize-event-ids.js",
@@ -25,7 +27,9 @@
   },
   "homepage": "https://github.com/YuriiZhydetskyi/U-StandUp#readme",
   "devDependencies": {
+    "@tailwindcss/cli": "^4.1.17",
     "js-yaml": "^4.1.1",
-    "sharp": "^0.34.5"
+    "sharp": "^0.34.5",
+    "tailwindcss": "^4.1.17"
   }
 }
