--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,7 @@ jobs:
         run: npm ci
 
       - name: Build dist
-        run: npm run build:dist
+        run: npm run build
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
