add image size optimizator

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@tailwindcss/cli": "^4.1.17",
     "js-yaml": "^4.1.1",
+    "node-html-parser": "^7.0.1",
     "sharp": "^0.34.5",
     "tailwindcss": "^4.1.17"
   }
