--- a/src/events/2025-02-25-open-mic-26-02-25.yaml
+++ b/src/events/2025-02-25-open-mic-26-02-25.yaml
@@ -1,4 +1,4 @@
-id: open-mic-26-02-25
+id: 2025-02-25-open-mic-26-02-25
 name: Відкритий мікрофон у Дюссельдорфі
 category: open-mic
 date: "2025-02-25"
