--- a/src/events/2025-03-18-abramov-solo-2025-03-18.yaml
+++ b/src/events/2025-03-18-abramov-solo-2025-03-18.yaml
@@ -1,4 +1,4 @@
-id: abramov-solo-2025-03-18
+id: 2025-03-18-abramov-solo-2025-03-18
 name: Сольний стендап Віталія Абрамова "Секс у побутових умовах"
 category: concert
 date: "2025-03-18"
