update event ids

--- a/src/events/2024-06-04-open-mic-the-first-one-cologne.yaml
+++ b/src/events/2024-06-04-open-mic-the-first-one-cologne.yaml
@@ -1,4 +1,4 @@
-id: 2024-06-04-open-ic-1
+id: 2024-06-04-open-mic-the-first-one-cologne
 name: Перший український відкритий мікрофон у Кельні
 category: open-mic
 date: "2024-06-04"
