--- a/src/events/2024-08-27-open-mic-the-second-one-cologne.yaml
+++ b/src/events/2024-08-27-open-mic-the-second-one-cologne.yaml
@@ -1,4 +1,4 @@
-id: 2024-08-27-open-ic-2
+id: 2024-08-27-open-mic-the-second-one-cologne
 name: Український відкритий мікрофон у Кельні
 category: open-mic
 date: "2024-08-27"
