--- a/src/events/2024-11-30-open-mic-cologne.yaml
+++ b/src/events/2024-11-30-open-mic-cologne.yaml
@@ -1,4 +1,4 @@
-id: 2024-11-30-open-ic-3
+id: 2024-11-30-open-mic-cologne
 name: Відкритий мікрофон у мовній школі
 category: open-mic
 date: "2024-11-30"
