update seo descriptions for events

--- a/src/events/2024-04-20-meeting-1.yaml
+++ b/src/events/2024-04-20-meeting-1.yaml
@@ -5,4 +5,9 @@ date: "2024-04-20"
 time: "17:00"
 location: Christophstraße 44, 50670 Köln
 linkToMaps: https://maps.app.goo.gl/QDfTgAdfdFXg9CjN6
+geo:
+  region: DE-NW
+  placename: Köln
+seo:
+  description: "Перша зустріч стендап-клубу У Стендап у Кельні 20 квітня о 17:00. Можна приходити і без жартів, просто познайомитись."
 description: Якщо плануєте приєднатись до першої зустрічі, залишайте 👍 на відповідне повідомлення у WhatsApp групі. До речі, на першу зустріч можна приходити без жартів, просто познайомитись теж буде корисно.
