--- a/src/events/2024-08-25-meeting-15.yaml
+++ b/src/events/2024-08-25-meeting-15.yaml
@@ -6,4 +6,9 @@ time: "17:00"
 location: Столики в парку біля Hanzaring, Köln
 locationForCalendar: Schach- und Mühletische, 50670 Köln
 linkToMaps: https://maps.app.goo.gl/tscc3bUP3BpQkBFt9
+geo:
+  region: DE-NW
+  placename: Köln
+seo:
+  description: "Читка стендап-клубу У Стендап у Кельні 25 серпня о 17:00. Остання читка перед пробним концертом."
 description: Це остання читка перед пробним концертом, який буде 27 серпня. Якщо плануєте приєднатись до цієї зустрічі, залишайте 👍 на відповідне повідомлення у <a href="https://chat.whatsapp.com/BXBNeksXPrJ29btgeo9BZZ" target="_blank">WhatsApp групі</a>, або напишіть адміністратору групи. Якщо Ви не знаєте, що таке "читка", то можете прочитати про це <a href="#punch-up-session">нижче</a> на цій же веб сторінці
