--- a/src/events/2024-08-27-open-mic-the-second-one-cologne.yaml
+++ b/src/events/2024-08-27-open-mic-the-second-one-cologne.yaml
@@ -5,6 +5,11 @@ date: "2024-08-27"
 time: "19:00"
 location: Theatercafe Filmdose, Zülpicher Str. 39, 50674 Köln
 linkToMaps: https://maps.app.goo.gl/BPHbnNLBU87iRAmM9
+geo:
+  region: DE-NW
+  placename: Köln
+seo:
+  description: "Український відкритий мікрофон у Кельні 27 серпня о 19:00. Виступити може кожен бажаючий безкоштовно. Theatercafe Filmdose."
 description: |-
   Запрошуємо всіх охочих взяти участь в українському відкритому мікрофоні у Кельні!
   • Виступити може кожен бажаючий безкоштовно.
