--- a/src/events/2025-03-18-abramov-solo-cologne.yaml
+++ b/src/events/2025-03-18-abramov-solo-cologne.yaml
@@ -4,6 +4,11 @@ category: concert
 date: "2025-03-18"
 time: "19:00"
 location: Zülpicher Str. 39, 50674 Köln
+geo:
+  region: DE-NW
+  placename: Köln
+seo:
+  description: "Сольний стендап Віталія Абрамова у Кельні 18 березня о 19:00. 8 років досвіду в гуморі, учасник Ліги Сміху."
 description: |-
   Можливо, ви ще не бачили Віталія Абрамова. Це не просто так. Це тому, що він так вирішив. Але часи змінюються.
 
