--- a/src/events/2025-05-13-may-standup-cologne.yaml
+++ b/src/events/2025-05-13-may-standup-cologne.yaml
@@ -4,6 +4,11 @@ category: concert
 date: "2025-05-13"
 time: "19:00"
 location: Zülpicher Str. 39, 50674 Köln
+geo:
+  region: DE-NW
+  placename: Köln
+seo:
+  description: "Травневий стендап у Кельні 13 травня о 19:00. 5 українських коміків, ведучий Абрам Оганесян. 90 хвилин чистого ендорфіну."
 description: |-
   Сміх – найкращий антистрес, і ми виписуємо його без рецепта 13 травня в центрі Кьольна.
 
