--- a/src/events/2025-05-29-open-mic-bonn.yaml
+++ b/src/events/2025-05-29-open-mic-bonn.yaml
@@ -4,6 +4,11 @@ category: open-mic
 date: "2025-05-29"
 time: "19:00"
 location: Paulstraße 5, 53111 Bonn
+geo:
+  region: DE-NW
+  placename: Bonn
+seo:
+  description: "Перший відкритий мікрофон у Бонні 29 травня о 19:00. Український гумор + українська кухня у ресторані Nowa Mowa. Вхід безкоштовний."
 description: |-
   Український гумор + українська кухня. Цим ідеальним комбо можна буде насолодитись вже 29 травня.
 
