--- a/src/events/2025-11-03-herbst-standup-cologne.yaml
+++ b/src/events/2025-11-03-herbst-standup-cologne.yaml
@@ -8,6 +8,11 @@ locationForCalendar: Zülpicher Str. 39, 50674 Köln
 linkToMaps: https://maps.app.goo.gl/BPHbnNLBU87iRAmM9
 ticketLink: https://secure.wayforpay.com/payment/herbstcologne
 image: img/November2025.webp
+geo:
+  region: DE-NW
+  placename: Köln
+seo:
+  description: "Осінній стендап у Кельні 3 листопада о 19:00. 6 українських коміків, ведучий Абрам Оганесян. Theatercafé Filmdose."
 description: |-
   Не знаєш, куди сходити у Кьольні? 
 
