--- a/src/events/2024-10-20-meeting-21.yaml
+++ b/src/events/2024-10-20-meeting-21.yaml
@@ -6,4 +6,9 @@ time: "17:00"
 location: Мовна школа на Clevischer Ring 7, 51065 Köln
 locationForCalendar: Clevischer Ring 7, 51065 Köln
 linkToMaps: https://maps.app.goo.gl/v5argQe8wJKerXSS8?g_st=it
+geo:
+  region: DE-NW
+  placename: Köln
+seo:
+  description: "Читка стендап-клубу У Стендап у Кельні 20 жовтня о 17:00. Пишемо новий матеріал для наступного виступу."
 description: Ця читка буде у приміщенні мовної школи. Будемо писати новий матеріал для наступного виступу.  Можна приходити і без жартів, просто познайомитись теж буде корисно. Якщо плануєте приєднатись до цієї зустрічі, залишайте 👍 на відповідне повідомлення у <a href="https://chat.whatsapp.com/BXBNeksXPrJ29btgeo9BZZ" target="_blank">WhatsApp групі</a>, або напишіть адміністратору групи. Якщо Ви не знаєте, що таке "читка", то можете прочитати про це <a href="#punch-up-session">нижче</a> на цій же веб сторінці
