--- a/src/events/2024-10-27-meeting-22.yaml
+++ b/src/events/2024-10-27-meeting-22.yaml
@@ -6,4 +6,9 @@ time: "16:00"
 location: Мовна школа на Clevischer Ring 7, 51065 Köln
 locationForCalendar: Clevischer Ring 7, 51065 Köln
 linkToMaps: https://maps.app.goo.gl/v5argQe8wJKerXSS8?g_st=it
+geo:
+  region: DE-NW
+  placename: Köln
+seo:
+  description: "Читка стендап-клубу У Стендап у Кельні 27 жовтня о 16:00. Пишемо новий матеріал для наступного виступу."
 description: Ця читка буде у приміщенні мовної школи. Будемо писати новий матеріал для наступного виступу. Зверніть увагу, що ця читка почнеться на годину раніше ніж зазвичай.
