--- a/src/events/2025-06-26-open-mic-dusseldorf.yaml
+++ b/src/events/2025-06-26-open-mic-dusseldorf.yaml
@@ -7,6 +7,11 @@ location: Дюссельдорф
 locationForCalendar: Kindercafé Wunderhaus Kölner Landstraße 148, 40591 Düsseldorf
 linkToMaps: https://maps.app.goo.gl/ZQ7gmr9L7PaQd8kq7
 image: img/open-mic-26-06-25.webp
+geo:
+  region: DE-NW
+  placename: Düsseldorf
+seo:
+  description: "Відкритий мікрофон у Дюссельдорфі 26 червня о 19:30. Жарти про еміграцію серед своїх. Вхід — будь-яка паперова купюра."
 description: |-
   Клуб @u_standup_cologne знову вривається в Дюссельдорф, щоб ви могли:
 
