--- a/src/events/2025-12-05-open-mic-bonn.yaml
+++ b/src/events/2025-12-05-open-mic-bonn.yaml
@@ -7,6 +7,11 @@ location: Ресторан української кухні Nowa Mowa, Bonn
 locationForCalendar: Paulstraße 5, 53111 Bonn
 linkToMaps: https://maps.app.goo.gl/LtJavSnNtFofUdrf6
 image: img/open-mic-bonn-05-12-25.webp
+geo:
+  region: DE-NW
+  placename: Bonn
+seo:
+  description: "Відкритий мікрофон у Бонні 5 грудня о 19:00. Формат gratis testen — платиш тільки якщо сподобалось. Ресторан Nowa Mowa."
 description: |-
   Ю-ху, Бонн! Ми знову до вас зі стендапом 💥
 
