--- a/src/events/2025-12-13-open-mic-dusseldorf.yaml
+++ b/src/events/2025-12-13-open-mic-dusseldorf.yaml
@@ -12,6 +12,12 @@ geo:
   placename: Düsseldorf
 seo:
   description: "Відкритий мікрофон у Дюссельдорфі 13 грудня о 19:00. Наші коміки тестують новий матеріал, а ти насолоджуєшся жартами. Вхід — будь-яка паперова купюра."
+offers:
+  "@type": Offer
+  price: 0
+  priceCurrency: EUR
+  availability: https://schema.org/InStock
+  description: "Вхід — будь-яка паперова купюра"
 description: |-
   План такий: вечір суботи, центр Дюссельдорфа, наші коміки перевіряють новий матеріал, а ти насолоджуєшся жартами і підтримуєш їх гучними оплесками😎
 
