--- a/src/events/2025-06-26-open-mic-dusseldorf.yaml
+++ b/src/events/2025-06-26-open-mic-dusseldorf.yaml
@@ -12,6 +12,12 @@ geo:
   placename: Düsseldorf
 seo:
   description: "Відкритий мікрофон у Дюссельдорфі 26 червня о 19:30. Жарти про еміграцію серед своїх. Вхід — будь-яка паперова купюра."
+offers:
+  "@type": Offer
+  price: 0
+  priceCurrency: EUR
+  availability: https://schema.org/InStock
+  description: "Вхід — будь-яка паперова купюра"
 description: |-
   Клуб @u_standup_cologne знову вривається в Дюссельдорф, щоб ви могли:
 
