update details about abramov's solo concert

--- a/src/events/2025-03-18-abramov-solo-cologne.yaml
+++ b/src/events/2025-03-18-abramov-solo-cologne.yaml
@@ -1,4 +1,5 @@
 id: 2025-03-18-abramov-solo-cologne
+image: img/2025-12-15-abramov.webp
 name: Сольний стендап Віталія Абрамова "Секс у побутових умовах"
 category: concert
 date: "2025-03-18"
@@ -24,3 +25,10 @@ description: |-
 
   📆 Коли? 18 березня, 19:00
   📌 Де? Zülpicher Str. 39, 50674 Köln
+performer:
+  "@type": Person
+  name: Віталій Абрамов
+  jobTitle: Стендап-комік
+  sameAs:
+    - https://www.instagram.com/abramov2388/
+  description: "Український стендап-комік родом із Донецька."
