update address in events

--- a/src/events/2024-05-19-meeting-3.yaml
+++ b/src/events/2024-05-19-meeting-3.yaml
@@ -8,6 +8,10 @@ linkToMaps: https://maps.app.goo.gl/QDfTgAdfdFXg9CjN6
 geo:
   region: DE-NW
   placename: Köln
+  streetAddress: Christophstraße 44
+  addressLocality: Köln
+  postalCode: "50670"
+  addressCountry: DE
 seo:
   description: "Читка стендап-клубу У Стендап у Кельні 19 травня о 17:00. Можна приходити і без жартів, просто познайомитись."
 description: Можна приходити і без жартів, просто познайомитись теж буде корисно. Якщо плануєте приєднатись до цієї зустрічі, залишайте 👍 на відповідне повідомлення у <a href="https://chat.whatsapp.com/BXBNeksXPrJ29btgeo9BZZ" target="_blank">WhatsApp групі</a>. Якщо Ви недавно приєднались до групи, та не бачите відповідного повідомлення - напишіть адміністратору групи. Якщо Ви не знаєте, що таке "читка", то можете прочитати про це <a href="#punch-up-session">нижче</a> на цій же веб сторінці
