--- a/src/events/2024-12-10-concert-cologne.yaml
+++ b/src/events/2024-12-10-concert-cologne.yaml
@@ -10,6 +10,11 @@ isFavorite: true
 geo:
   region: DE-NW
   placename: Köln
+  name: Theatercafe Filmdose
+  streetAddress: Zülpicher Str. 39
+  addressLocality: Köln
+  postalCode: "50674"
+  addressCountry: DE
 seo:
   description: "Крафтовий стендап у Кельні 10 грудня о 19:00. 5 коміків, ведучий Абрам Оганесян з Ліги Сміху. Theatercafe Filmdose."
 description: "Наші коміки створили нові жарти маленькими партіями за індивідуальними рецептами. Усе в кращих традиціях якісних крафтових продуктів! Це буде вечір, де кожен жарт — авторський, з любов'ю до деталей і з повагою до вашого гарного настрою. На сцені вас розважатимуть: 🎙 Антон Новосад 🎙 Катерина Велько 🎙 Наталя Ґорман 🎙 Леся Калина 🎙 Іра Сіробаба ⭐️ Головна зірка та ведучий вечора — Абрам Оганесян, актор і автор команди Ліги Сміху «Ніколь Кідман». Квитки можна придбати <a href=\"https://secure.wayforpay.com/payment/s323ed0f8d3d2\" target=\"_blank\">тут</a>"
