--- a/src/events/2025-02-25-open-mic-dusseldorf.yaml
+++ b/src/events/2025-02-25-open-mic-dusseldorf.yaml
@@ -10,6 +10,11 @@ image: open-mic-26-02-25.webp
 geo:
   region: DE-NW
   placename: Düsseldorf
+  name: Kindercafé Wunderhaus
+  streetAddress: Kölner Landstraße 148
+  addressLocality: Düsseldorf
+  postalCode: "40591"
+  addressCountry: DE
 seo:
   description: "Відкритий мікрофон у Дюссельдорфі 26 лютого о 19:30. Жарти про еміграцію, батьківство та страхи дитинства. Вхід безкоштовний."
 description: |-
