--- a/src/events/2025-04-28-open-mic-dusseldorf.yaml
+++ b/src/events/2025-04-28-open-mic-dusseldorf.yaml
@@ -7,6 +7,11 @@ location: Kölner Landstraße 148, Düsseldorf
 geo:
   region: DE-NW
   placename: Düsseldorf
+  name: Kindercafé Wunderhaus
+  streetAddress: Kölner Landstraße 148
+  addressLocality: Düsseldorf
+  postalCode: "40591"
+  addressCountry: DE
 seo:
   description: "Відкритий мікрофон у Дюссельдорфі 28 квітня о 19:00. Отримай свої 5 хвилин слави або просто насолоджуйся жартами. Вхід безкоштовний."
 offers:
