--- a/src/events/2025-12-13-open-mic-dusseldorf.yaml
+++ b/src/events/2025-12-13-open-mic-dusseldorf.yaml
@@ -10,6 +10,11 @@ image: img/open-mic-dusseldorf-13-12-25.webp
 geo:
   region: DE-NW
   placename: Düsseldorf
+  name: Shadow-Arkaden
+  streetAddress: Schadowstraße 11
+  addressLocality: Düsseldorf
+  postalCode: "40212"
+  addressCountry: DE
 seo:
   description: "Відкритий мікрофон у Дюссельдорфі 13 грудня о 19:00. Наші коміки тестують новий матеріал, а ти насолоджуєшся жартами. Вхід — будь-яка паперова купюра."
 offers:
