--- a/src/events/2024-10-01-concert-october-cologne.yaml
+++ b/src/events/2024-10-01-concert-october-cologne.yaml
@@ -10,6 +10,11 @@ isFavorite: true
 geo:
   region: DE-NW
   placename: Köln
+  name: Theatercafe Filmdose
+  streetAddress: Zülpicher Str. 39
+  addressLocality: Köln
+  postalCode: "50674"
+  addressCountry: DE
 seo:
   description: "Український стендап у Кельні 1 жовтня о 19:00. 5 коміків, ведучий Абрам Оганесян з Ліги Сміху. Theatercafe Filmdose."
 description: |-
