--- a/src/events/2024-11-30-open-mic-cologne.yaml
+++ b/src/events/2024-11-30-open-mic-cologne.yaml
@@ -11,6 +11,11 @@ isFavorite: true
 geo:
   region: DE-NW
   placename: Köln
+  name: Prisma Bildungsplattform
+  streetAddress: Clevischer Ring 7
+  addressLocality: Köln
+  postalCode: "51065"
+  addressCountry: DE
 seo:
   description: "Відкритий мікрофон у Кельні 30 листопада о 17:00. Твій шанс зробити перший крок у стендапі. Мовна школа Prisma."
 description: |-
