--- a/src/events/2024-12-03-open-mic-cologne.yaml
+++ b/src/events/2024-12-03-open-mic-cologne.yaml
@@ -10,6 +10,11 @@ isFavorite: true
 geo:
   region: DE-NW
   placename: Köln
+  name: Theatercafe Filmdose
+  streetAddress: Zülpicher Str. 39
+  addressLocality: Köln
+  postalCode: "50674"
+  addressCountry: DE
 seo:
   description: "Відкритий мікрофон у Кельні 3 грудня о 19:00. Твій шанс зробити перший крок у стендапі. Theatercafe Filmdose."
 description: "Переїхав у Німеччину, але досі жартуєш лише на інтеграційних курсах? Ходиш із думкою: \"Та це ж золото, а не матеріал для сцени!\"? Тоді час діяти! Ми — стендап-клуб \"У стендап\", запрошуємо тебе на два відкриті мікрофони. Це твій шанс зробити перший крок, почати розкачувати свої жарти. Щоб виступити у будь-який з цих днів, просто напиши нам + у приват. А якщо хочеш подивитись, безкоштовні квитки можна придбати <a href=\"https://www.eventbrite.com/e/1090097052629\" target=\"_blank\">тут</a>. Не переживай, якщо ти новачок. Ми саме таких і шукаємо. Тому створили дружню атмосферу для того, щоб тобі легко було почати. Приходь, бери з собою жарти і настрій! Не відкладай на потім — жити спішити треба, гляди ж, не проспи!"
