add images to events without images

--- a/src/events/2025-02-25-open-mic-dusseldorf.yaml
+++ b/src/events/2025-02-25-open-mic-dusseldorf.yaml
@@ -1,12 +1,12 @@
-id: 2025-02-25-open-mic-26-02-25
+id: 2025-02-26-open-mic-dusseldorf
 name: Відкритий мікрофон у Дюссельдорфі
 category: open-mic
-date: "2025-02-25"
+date: "2025-02-26"
 time: "19:30"
 location: Дитяче кафе
 locationForCalendar: Kölner Landstraße 148, 40591 Düsseldorf
 linkToMaps: https://maps.app.goo.gl/ZQ7gmr9L7PaQd8kq7
-image: open-mic-26-02-25.webp
+image: img/2025-02-26-open-mic-dusseldorf.webp
 geo:
   region: DE-NW
   placename: Düsseldorf
