--- a/src/events/2025-03-06-spring-standup-cologne.yaml
+++ b/src/events/2025-03-06-spring-standup-cologne.yaml
@@ -4,6 +4,7 @@ category: concert
 date: "2025-03-06"
 time: "19:00"
 location: Theatercafe Filmdose, Zülpicher Str. 39, Köln
+image: img/2025-03-06-spring-standup-cologne.webp
 geo:
   region: DE-NW
   placename: Köln
