--- a/src/events/2025-04-28-open-mic-dusseldorf.yaml
+++ b/src/events/2025-04-28-open-mic-dusseldorf.yaml
@@ -4,6 +4,7 @@ category: open-mic
 date: "2025-04-28"
 time: "19:00"
 location: Kölner Landstraße 148, Düsseldorf
+image: img/2025-04-28-open-mic-dusseldorf.webp
 geo:
   region: DE-NW
   placename: Düsseldorf
