--- a/src/events/2025-05-13-may-standup-cologne.yaml
+++ b/src/events/2025-05-13-may-standup-cologne.yaml
@@ -4,6 +4,7 @@ category: concert
 date: "2025-05-13"
 time: "19:00"
 location: Zülpicher Str. 39, 50674 Köln
+image: img/2025-05-13-may-standup-cologne.webp
 geo:
   region: DE-NW
   placename: Köln
