--- a/src/events/2025-05-29-open-mic-bonn.yaml
+++ b/src/events/2025-05-29-open-mic-bonn.yaml
@@ -4,6 +4,7 @@ category: open-mic
 date: "2025-05-29"
 time: "19:00"
 location: Paulstraße 5, 53111 Bonn
+image: img/2025-05-29-open-mic-bonn.webp
 geo:
   region: DE-NW
   placename: Bonn
