fix handmade standup

--- a/src/events/2026-03-05-handmade-standup-cologne.yaml
+++ b/src/events/2026-03-05-handmade-standup-cologne.yaml
@@ -6,7 +6,7 @@ time: "19:00"
 location: Theatercafé Filmdose, Köln
 locationForCalendar: Zülpicher Str. 39, 50674 Köln
 linkToMaps: https://maps.app.goo.gl/BPHbnNLBU87iRAmM9
-image: img/2026-03-05-handmade-standup-cologne.webp
+image: img/2026-03-05-handmade-standup-cologne.jpg
 isFavorite: true
 ticketLink: https://secure.wayforpay.com/payment/handmadestandup
 geo:
